<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.company.hoymm.morsecodeconverter.ConvertToFlashlight">
    <!-- FIRST LINEAR LAYOUT BUTTON - MORSE FLASHLIGHT CONVERTER -->
    <LinearLayout
        android:id="@+id/linear_layout_button_flashlight"
        style="@style/linearLayoutButton"
        android:layout_weight="20"
        android:onClick="backToMenuButton"
        >
        <TextView
            style="@style/linearLayoutButton_textView"
            android:text="@string/convert_to_flashlight"
            android:onClick="backToMenuButton"
            />
        <ImageView
            android:id="@+id/linear_layout_button_flashlight_icon"
            android:src="@drawable/flashlight"
            style="@style/linearLayoutButton_imageView"
            android:onClick="backToMenuButton"
            />
    </LinearLayout>

    <!-- ###################################  convert to FLASHLIGHT ###################################  -->
    <LinearLayout
        android:id="@+id/flashlight_convert_second_menu_linear_layout"
        style="@style/secondMenuLayout"
        android:gravity="center"
        android:visibility="visible"
        >
        <!--        INSERT TEXT and SPEED textView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            >
            <TextView
                style="@style/secondMenuLayout_textView"
                android:layout_marginTop="0dp"
                android:padding="4dp"
                android:layout_width="0dp"
                android:layout_weight="65"
                android:text="@string/insert_text"
                />
            <TextView
                style="@style/secondMenuLayout_textView"
                android:padding="4dp"
                android:layout_marginTop="0dp"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="35"
                android:text="@string/speed"
                />
        </LinearLayout>
        <!--        INSERT text to convert and CHOOSE SPINNER SPEED -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:gravity="left|top"
            android:layout_gravity="center|bottom"
            >
            <EditText
                android:id="@+id/convert_morse_edit_text_input_flashlight"
                style="@style/secondMenuLayout_editText"
                android:gravity="bottom"
                android:hint="SOS..."
                android:layout_weight="70"
                />
            <Spinner
                style="@style/secondMenuLayout_spinner"
                android:id="@+id/spinnerFlashlight"
                android:layout_marginBottom="13dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:background="#FFFFFF"
            android:gravity="center"
            android:id="@+id/showCurrentlyTranslatedTextFlashlight"
            />
        <!-- BUTTONS LINEAR-LAYOUT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
            <ImageButton
                android:id="@+id/soundEnableFlashlightButtonId"
                android:scaleType="fitCenter"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/sound_on"
                android:onClick="makeSoundFlashlightEnable"
                android:tag="enable"
                />
            <Button
                android:onClick="backToMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/back_to_menu_button"/>
            <Button
                android:id="@+id/myConvertFlashlightButton"
                android:onClick="convertToFlashlightButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/convert_button"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
