<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.company.hoymm.morsecodeconverter.ConvertToScreen">
    <!-- FIRST LINEAR LAYOUT BUTTON - MORSE SCREEN CONVERTER -->
    <LinearLayout
        android:id="@+id/linear_layout_button_screen"
        style="@style/linearLayoutButton"
        android:onClick="backToMenuButton"
        android:layout_weight="20"
        >
        <TextView
            style="@style/linearLayoutButton_textView"
            android:text="@string/convert_to_screen_flickering"
            android:onClick="backToMenuButton"
            />
        <ImageView
            android:id="@+id/linear_layout_button_screen_icon"
            android:src="@drawable/screen"
            style="@style/linearLayoutButton_imageView"
            android:onClick="backToMenuButton"
            />
    </LinearLayout>
    <!--  ################################### convert to SCREEN  ################################### -->
    <LinearLayout
        android:id="@+id/screen_convert_second_menu_linear_layout"
        style="@style/secondMenuLayout"
        android:gravity="center"
        android:visibility="visible"
        >
        <!--        INSERT TEXT and SPEED textView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            >
            <TextView
                style="@style/secondMenuLayout_textView"
                android:layout_marginTop="0dp"
                android:padding="4dp"
                android:layout_width="0dp"
                android:layout_weight="65"
                android:text="@string/insert_text"
                />
            <TextView
                style="@style/secondMenuLayout_textView"
                android:padding="4dp"
                android:layout_marginTop="0dp"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="35"
                android:text="@string/speed"
                />
        </LinearLayout>
        <!--        INSERT text to convert and CHOOSE SPINNER SPEED -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="100"
            android:layout_gravity="center|bottom"
            >
            <EditText
                android:id="@+id/convert_morse_edit_text_input_screen"
                style="@style/secondMenuLayout_editText"
                android:gravity="bottom"
                android:hint="SOS..."
                android:layout_weight="70"
                />
            <Spinner
                style="@style/secondMenuLayout_spinner"
                android:id="@+id/spinnerScreen"
                android:layout_marginBottom="13dp"
                />
        </LinearLayout>
        <!--
        &lt;!&ndash; TRANSLATED MORSE CODE &ndash;&gt;
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:background="#FFFFFF"
            android:id="@+id/showCurrentlyTranslatedTextScreen"
            />

        -->
        <!-- SCREEN MORSE CODE SHOW -->
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/convertet_morse_edit_view_output_screen"
            android:padding="8dp"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"

            />
        <!-- BUTTONS LINEAR-LAYOUT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
            <ImageButton
                android:id="@+id/soundEnableButtonId"
                android:scaleType="fitCenter"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/sound_on"
                android:onClick="makeSoundScreenEnable"
                android:tag="enable"
                />
            <Button
                android:onClick="backToMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/back_to_menu_button"/>
            <Button
                android:id="@+id/myConvertScreenButton"
                android:onClick="convertToScreenButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/convert_button"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
